# cocreator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.yaml  config.yaml.example  main.py  pyproject.toml
src/cocreator/: __init__.py  cli.py  config.py  schemas.py
src/cocreator/pipeline/: AGENTS.md  __init__.py  detector.py  extractor.py  progress_tracker.py  reasoner.py
src/cocreator/prompts/: __init__.py  future_confirmation.j2  history_analysis.j2
src/cocreator/providers/: __init__.py  openai_compatible.py
tests/: conftest.py  test_detector.py  test_extractor.py  test_integration.py  test_progress.py  test_provider.py  test_reasoner.py  test_schemas.py
