[project]
name = "cocreator"
version = "0.1.0"
description = "Driving scenario event detection and causal inference tool"
readme = "README.md"
requires-python = ">=3.9.21"
dependencies = [
    "httpx[socks]>=0.28.1",
    "numpy>=2.0.2",
    "openai>=2.30.0",
    "pillow>=11.3.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.3",
    "typer>=0.23.2",
]

[project.scripts]
cocreator = "cocreator.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "datasets>=4.5.0",
    "pillow>=11.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]
